[gd_scene load_steps=3 format=1]

[ext_resource path="res://Sola.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 60, 60 )

[node name="Sola" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Sola" type="KinematicBody2D" parent="."]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sola"]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Aspekto" type="Node2D" parent="Sola"]

[node name="Korpo" type="Polygon2D" parent="Sola/Aspekto"]

polygon = Vector2Array( 50, -50, 50, 50, -50, 50, -50, -50 )
uv = Vector2Array(  )
color = Color( 0.960784, 0.960784, 0.960784, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 5.2

[node name="Konturo" type="Polygon2D" parent="Sola/Aspekto"]

polygon = Vector2Array( 50, -50, 50, 50, -50, 50, -50, -50 )
uv = Vector2Array(  )
color = Color( 0.458824, 0.458824, 0.458824, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = true
invert/border = 10.0

[node name="Kuglujo_A" type="Polygon2D" parent="Sola/Aspekto"]

transform/pos = Vector2( 30, -50 )
polygon = Vector2Array( 30, -30, 30, 30, 0, 20, 0, -30 )
uv = Vector2Array(  )
color = Color( 1, 0.768627, 0, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( -20, 30 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="Kuglujo_B" type="Polygon2D" parent="Sola/Aspekto"]

transform/pos = Vector2( -20, -60 )
polygon = Vector2Array( 20, -30, 20, 20, -10, 30, -10, -30 )
uv = Vector2Array(  )
color = Color( 1, 0.768627, 0, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( -10, 40 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="Resxargigxi" type="Timer" parent="."]

process_mode = 1
wait_time = 0.3
one_shot = false
autostart = true

[connection signal="timeout" from="Resxargigxi" to="." method="_on_Resxargigxi_timeout"]


